syntax = "proto3";
package ibc.lightclients.corda.v1;

option go_package = "github.com/hyperledger-labs/yui-corda-ibc/go/x/ibc/light-clients/xx-corda/types";
option java_outer_classname = "BankProto";

import "ibc/lightclients/corda/v1/corda-types.proto";
import "google/protobuf/empty.proto";

service BankService {
  // transactions
  rpc CreateBank (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc AllocateFund (AllocateFundRequest) returns (google.protobuf.Empty);

  // queries
  rpc QueryBank (google.protobuf.Empty) returns (Bank);
}

message AllocateFundRequest {
  string owner = 1;
  string denom = 2;
  string amount = 3;
}

message Bank {
  message BalanceMapPerDenom {
    map<string, string> pubkeyToAmount = 1;
  }

  message BalanceMap {
    map<string, BalanceMapPerDenom> denomToMap = 1;
  }

  message IbcDenomMap {
    map<string, string> ibcDenomToDenom = 1;
  }

  repeated Party participants = 1;
  StateRef baseId = 2;
  BalanceMap allocated = 3;
  BalanceMap locked = 4;
  BalanceMap minted = 5;
  IbcDenomMap denoms = 6;
  string id = 7;
}
